# rust_warp

./: .gitignore  Cargo.toml  README.md  restart.sh  restart_cron.sh
config/: config.json  raspberrypi-config.json
src/: config.rs  environment.rs  handlers.rs  logging.rs  main.rs  utils.rs
src/handlers/: command.rs  config.rs  environment.rs  index.rs  proxy.rs  static_file.rs
static/: command.js  proxy.js
templates/: command.hbs  index.hbs  proxy.hbs
